@@ -528,6 +528,7 @@ Sun Feb 21 09:34:09 CST 2016
 
 
 Mon Feb 22 11:04:52 CST 2016
+- [+] include/sandix/resource.h
 - [+] include/sandix/threads.h			[D] put NR_CPUS here
 - [+] kernel/cpu.c
 - [+] arch/x86/include/asm/cpu.h		[D] online, active things
